feat (click outside): toggle open/close
- add attributes to customize context section
- handle when user clicks outside the FAB region

--- a/index.html
+++ b/index.html
@@ -23,11 +23,21 @@
 </head>
 
 <body>
-	<vis-fab id="floatingChat">
+	<vis-fab id="floatingChat" contexth="80px">
     <a href="#">a</a>
     <a href="#">b</a>
     <a href="#">c</a>
   </vis-fab>
+  <iframe>
+    <html>
+      <head>
+
+      </head>
+      <body>
+        watashi
+      </body>
+    </html>
+  </iframe>
 </body>
 
 </html>
